--- a/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
+++ b/Main index/eartraining/Seven Worlds/De Vijfde Harmonische Omgeving: Mixolydisch.html
@@ -4,42 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Vijfde Harmonische Omgeving: Mixolydisch</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
-    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
 
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: #ecf0f1;
+            font-family: helvetica, arial, sans-serif;
+            font-size: 16px;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            text-align: center;
+            margin: 0;
+        }
+
+        header {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 48px;
+            color: #3498db;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+
+        nav {
+            margin-bottom: 40px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            color: #3498db;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            max-width: 800px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            font-size: 32px;
+            margin-bottom: 30px;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+
+        .lesson-block {
+            padding: 20px;
+            margin-bottom: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .lesson-block p {
+            font-size: 18px;
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+
+        .lesson-block audio {
+            display: block;
+            margin: 0 auto;
+        }
+
+        /* Zachte kleuren voor elk lesblok */
+        .lesson-block:nth-child(6) {
+            background-color: #ffebcc; /* Zacht oranje */
+        }
+
+        .lesson-block:nth-child(2) {
+            background-color: #e6f7ff; /* Zacht blauw */
+        }
+
+        .lesson-block:nth-child(3) {
+            background-color: #e6ffe6; /* Zacht groen */
+        }
+
+        .lesson-block:nth-child(4) {
+            background-color: #ffe6e6; /* Zacht roze */
+        }
+
+        .lesson-block:nth-child(5) {
+            background-color: #f9e6ff; /* Zacht paars */
+        }
+
+    </style>
 </head>
 <body>
-    <Header>
+    <header>
         <h1>Seven Worlds</h1>
         <nav>
-                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
-                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
-                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+            <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
-    </Header>
+    </header>
     <main>
-        <h2>De Vijfde Harmonische Omgeving: Mixolydisch</h2>
-        <p>
-            Meditatief (5 . 6 . 7 1 . 2 . 3 4)
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_13.mp3"></audio>
-        <p>
-            Akkoordnoten (5 7 2 4)  
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_14.mp3"></audio>
-        <p>
-            Gevorderd 
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_15.mp3"></audio>
-        <p>
-            Backingtrack in C
+        <section>
+            <h2>De Vijfde Harmonische Omgeving: Mixolydisch</h2>
+        </section>
 
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, modern, key of C (note 5 = G).mp3"></audio>
-        <p>
-            Backingtrack Jazz in C
-        </p>
-        <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, jazz, key of C (note 5 = G).mp3"></audio>
+        <div class="lesson-block">
+            <p>Meditatief (5 . 6 . 7 1 . 2 . 3 4)</p>
+            <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_13.mp3"></audio>
+        </div>
+
+        <div class="lesson-block">
+            <p>Akkoordnoten (5 7 2 4)</p>
+            <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_14.mp3"></audio>
+        </div>
+
+        <div class="lesson-block">
+            <p>Gevorderd</p>
+            <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/ifr_Stn2_15.mp3"></audio>
+        </div>
+
+        <div class="lesson-block">
+            <p>Backingtrack in C</p>
+            <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, modern, key of C (note 5 = G).mp3"></audio>
+        </div>
+
+        <div class="lesson-block">
+            <p>Backingtrack Jazz in C</p>
+            <audio controls controlslist="nodownload" src="Audio/De Vijfde Harmonische Omgeving: Mixolydisch/5th harmonic env, jazz, key of C (note 5 = G).mp3"></audio>
+        </div>
     </main>
 </body>
 </html>
