--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -4,8 +4,158 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seven Worlds Index</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
-    <script src="https://thomastooten.github.io/JPRSite/index.js"></script>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        
+        body {
+            background-color: #ecf0f1;
+            font-family: helvetica, arial, sans-serif;
+            font-size: 16px;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            text-align: center;
+            margin: 0;
+        }
+
+        header {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 48px;
+            color: #3498db;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+
+        nav {
+            margin-bottom: 40px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            color: #3498db;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            margin-top: 10px;
+        }
+
+        /* Styling for H2 to make it stand out */
+        section h2 {
+            font-size: 40px; /* Grotere tekst */
+            font-weight: bold;
+            color: #2c3e50;
+            margin-bottom: 30px;
+            letter-spacing: 2px; /* Meer ruimte tussen letters */
+            text-transform: uppercase;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 10px;
+        }
+
+        section h2::after {
+            content: '';
+            width: 80px;
+            height: 4px;
+            background-color: #3498db; /* Kleur van de streep */
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            border-radius: 2px;
+        }
+
+        #links-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 40px;
+            margin-top: 20px;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #2c3e50;
+            text-align: center;
+            transition: transform 0.3s, box-shadow 0.3s;
+            border-radius: 15px;
+            overflow: hidden;
+        }
+
+        .link:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+        }
+
+        .link img {
+            display: block;
+            margin: 0 auto;
+            border-radius: 15px;
+            width: 220px;
+            height: 220px;
+            object-fit: cover;
+            transition: transform 0.3s;
+        }
+
+        .link:hover img {
+            transform: scale(1.05);
+        }
+
+        .link span {
+            display: block;
+            margin-top: 15px;
+            font-size: 20px;
+            color: #7f8c8d;
+            font-weight: bold;
+        }
+
+        /* Responsive layout */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 36px;
+            }
+
+            .link img {
+                width: 160px;
+                height: 160px;
+            }
+
+            .link span {
+                font-size: 18px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 28px;
+            }
+
+            .link img {
+                width: 120px;
+                height: 120px;
+            }
+
+            .link span {
+                font-size: 16px;
+            }
+        }
+    </style>
 </head>
 <body>
     <Header>
@@ -18,42 +168,41 @@
     </Header>
     <main>
         <section>
-
             <H2>Sing The Numbers</H2>
         </section>
-        <section>
-
-            <a href="De Eerste Harmonische Omgeving (Ionisch).html" style="text-decoration: none; color: #999; font-size: 20px;">De Eerste Harmonische Omgeving: Ionisch
+        <div id="links-container">
+            <a class="link" href="De Eerste Harmonische Omgeving (Ionisch).html">
+                <img src="Afbeeldingen/1.webp">
+                <span>De Eerste Harmonische Omgeving: <br> Ionisch</span>
             </a>
-        </section>
-        <section>
-
-            <a href="De Tweede Harmonische Omgeving (Dorisch).html" style="text-decoration: none; color: #999; font-size: 20px;" >De Tweede Harmonische Omgeving (Dorisch)
+            <a class="link" href="De Tweede Harmonische Omgeving (Dorisch).html">
+                <img src="Afbeeldingen/2.webp" alt="Dorisch">
+                <span>De Tweede Harmonische Omgeving: <br> (Dorisch)</span>
             </a>
-        </section>
-        <section>
-
-            <a href="De Derde Harmonische Omgeving: Phrygisch.html" style="text-decoration: none; color: #999; font-size: 20px;">De Derde Harmonische Omgeving: Phrygisch</a>
-        </section>
-        <section>
-
-            <a href="De Vierde Harmonische Omgeving: Lydisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Vierde Harmonische Omgeving: Lydisch</a>
-        </section>
-        <section>
-
-            <a href="De Vijfde Harmonische Omgeving: Mixolydisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Vijfde Harmonische Omgeving: Mixolydisch
+            <a class="link" href="De Derde Harmonische Omgeving: Phrygisch.html">
+                <img src="Afbeeldingen/3.webp" alt="Phygisch">
+                <span>De Derde Harmonische Omgeving:  <br> Phrygisch</span>
             </a>
-        </section>
-        <section>
-
-            <a href="De Zesde Harmonische Omgeving: Aeolisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Zesde Harmonische Omgeving: Aeolisch
+            <a class="link" href="De Vierde Harmonische Omgeving: Lydisch.html">
+                <img src="Afbeeldingen/4.webp" alt="">
+                <span>De Vierde Harmonische Omgeving: <br> Lydisch</span>
             </a>
-        </section>
-        <section>
 
-            <a href="De Zevende Harmonische Omgeving: Locrisch.html" style="text-decoration: none; color: #999; font-size: 20px;">De Zevende Harmonische Omgeving: Locrisch
+            <a class="link" href="De Vijfde Harmonische Omgeving: Mixolydisch.html">
+                <img src="Afbeeldingen/5.webp" alt="">
+                <span>De Vijfde Harmonische Omgeving: <br> Mixolydisch</span>
             </a>
-        </section>
+            <a class="link" href="De Zesde Harmonische Omgeving: Aeolisch.html">
+                <img src="Afbeeldingen/6.webp" alt="">
+                <span>De Zesde Harmonische Omgeving: <br> Aeolisch</span>
+            </a>
+
+            <a class="link" href="De Zevende Harmonische Omgeving: Locrisch.html">
+                <img src="Afbeeldingen/7.webp" alt="">
+                <span>De Zevende Harmonische Omgeving: <br> Locrisch</span>
+            </a>
+  
+        </div>
 
     </main>
 </body>
