--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4BonfireFolkySwing.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/M4BonfireFolkySwing.html
@@ -27,54 +27,54 @@
         <section id="steezy">
             <h2>Chord 1 and chord 4</h2>
         </section>
-
+        /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of A).mp3
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Campfire Guitars/Chords 1 and 4 - Bonfire Folky Swing (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M4/Lesson4/Chords 1 and 4 - Bonfire Folky Swing/Chords 1 and 4 - Bonfire Folky Swing (key of Gb).mp3"></audio>
         </div>
 
 
